solve linter`s issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,11 @@
 [flake8]
 max-line-length = 99
+# Q000 Double quotes found but single quotes preferred
+# WPS111 Found too short name
+# WPS305 Found `f` string
+ignore = Q000, WPS305
+per-file-ignores =
+  sentry/scripts/sentry.py: WPS111
 
 [isort]
 line_length = 99
