--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,10 @@ max-line-length = 99
 # Q000 Double quotes found but single quotes preferred
 # WPS111 Found too short name
 # WPS305 Found `f` string
+# WPS412 Found `__init__.py` module with logic
 ignore = Q000, WPS305
 per-file-ignores =
+  sentry/__init__.py: WPS412
   sentry/scripts/sentry.py: WPS111
 
 [isort]
